# FRB_pipeline

./: DDplan_parameter.sh  README.md  disp_parameter.sh  pyproject.toml  setup.py
example/: channels_to_remove.txt
scripts/: clustering.py  clustering_dbscan.py  clustering_hdbscan.py  csv_convertor.py
src/cluster_tools/: __init__.py  clustering.py
src/cluster_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cluster_tools/cli/: DDplan_dedisperse.py  __init__.py  clustering_dbscan.py  clustering_hdbscan.py
src/frbfunction/: __init__.py  clustring.py
src/frbfunction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/frbfunction/cli/: clustering_dbscan.py  clustering_hdbscan.py  csv_convertor.py
