[build-system]
requires = ["setuptools >= 45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cluster_tools"
version = "0.1.0"
description = "FRB search and classification pipeline"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "hdbscan",
    "your",
]

[project.scripts]
cluster_dbscan = "cluster_tools.cli.clustering_dbscan:main"
cluster_hdbscan = "cluster_tools.cli.clustering_hdbscan:main"
csv_convert = "cluster_tools.cli.csv_convertor:main"
dedisperse = "cluster_tools.cli.DDplan_dedisperse:main"
